# HyperRec

./: .gitignore  README.md  index.html  package-lock.json  package.json
requirements/: _todo.md  hyperrec briefing.md
scripts/: copy-tauri-bundles.mjs  tauri.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: controller.rs  lib.rs  main.rs
src-tauri/src/audio/: mac.rs  mac_system_audio.rs  mixer.rs  mod.rs
