[package]
name = "hyperrec"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperrec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
cpal = "0.15"
hound = "3"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-audio = "0.3"
objc2-core-audio-types = "0.3"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.3"
objc2-core-media = "0.3"
objc2-screen-capture-kit = { version = "0.3", features = [
    "block2",
    "dispatch2",
    "objc2-core-media",
    "SCShareableContent",
    "SCStream",
] }
